--- a/case_details_page.html
+++ b/case_details_page.html
@@ -397,6 +397,82 @@
             color: #3b82f6;
             margin-top: 2px;
         }
+
+        /* Communication Preview Modal Styles */
+        .preview-modal {
+            width: 600px;
+            max-width: 90%;
+        }
+
+        .preview-tabs {
+            display: flex;
+            border-bottom: 2px solid #e0e0e0;
+            padding: 0 24px;
+            gap: 8px;
+        }
+
+        .preview-tab {
+            padding: 12px 20px;
+            background: none;
+            border: none;
+            font-size: 14px;
+            font-weight: 500;
+            color: #666;
+            cursor: pointer;
+            border-bottom: 2px solid transparent;
+            margin-bottom: -2px;
+            transition: all 0.2s;
+        }
+
+        .preview-tab.active {
+            color: #3b82f6;
+            border-bottom-color: #3b82f6;
+        }
+
+        .preview-tab:hover:not(.active) {
+            color: #333;
+        }
+
+        .preview-content {
+            padding: 24px;
+            max-height: 400px;
+            overflow-y: auto;
+        }
+
+        .preview-subject {
+            font-size: 15px;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 16px;
+            padding-bottom: 12px;
+            border-bottom: 1px solid #e0e0e0;
+        }
+
+        .preview-body {
+            font-size: 14px;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        .preview-body p {
+            margin-bottom: 12px;
+        }
+
+        .preview-body strong {
+            font-weight: 600;
+        }
+
+        .preview-body a {
+            color: #3b82f6;
+            text-decoration: underline;
+        }
+
+        .preview-signature {
+            margin-top: 16px;
+            padding-top: 16px;
+            border-top: 1px solid #e0e0e0;
+            color: #666;
+        }
     </style>
 </head>
 <body>
@@ -551,7 +627,66 @@
             </div>
             <div class="modal-footer">
                 <button class="btn-secondary" onclick="closeModal()">Cancel</button>
-                <button class="btn-primary" onclick="sendToPOC()">Send Email to POC</button>
+                <button class="btn-primary" onclick="showPreview()">Communicate to POC</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Communication Preview Modal -->
+    <div class="modal-overlay" id="previewModal">
+        <div class="modal preview-modal">
+            <div class="modal-header">
+                <h2 class="modal-title">Send Communication Preview - Case ID <span id="previewCaseId">R4lQTiJaYdJ526</span></h2>
+                <button onclick="closePreviewModal()" style="background: none; border: none; color: #666; font-size: 24px; cursor: pointer; margin-left: auto; padding: 0; width: 30px; height: 30px;">&times;</button>
+            </div>
+
+            <!-- Tabs -->
+            <div class="preview-tabs">
+                <button class="preview-tab active" onclick="switchTab('email')">Email</button>
+                <button class="preview-tab" onclick="switchTab('whatsapp')">Whatsapp</button>
+            </div>
+
+            <!-- Email Preview Content -->
+            <div class="preview-content" id="emailPreview">
+                <div class="preview-subject">
+                    Action Required: Provide Additional Information to Enable Your Payment Method
+                </div>
+                <div class="preview-body">
+                    <p>Hi King, We received your request to enable <strong>Cards</strong> on <strong>18-06-2024</strong>. To proceed with your request, we need a few additional details from you.</p>
+
+                    <p>Please provide the required information from your Merchant Dashboard:</p>
+
+                    <p><a href="#">Click here to update your details</a></p>
+
+                    <p>The sooner we receive the information, the faster we can enable the payment method on your account. If you have any questions, our support team is here to help.</p>
+
+                    <div class="preview-signature">
+                        <p style="margin: 0;">Best regards,</p>
+                        <p style="margin: 4px 0 0 0;">Razorpay Merchant Support Team</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- WhatsApp Preview Content (hidden by default) -->
+            <div class="preview-content" id="whatsappPreview" style="display: none;">
+                <div class="preview-body">
+                    <p><strong>Action Required: Provide Additional Information</strong></p>
+
+                    <p>Hi King, We received your request to enable Cards on 18-06-2024.</p>
+
+                    <p>Please provide the required information from your Merchant Dashboard to proceed.</p>
+
+                    <p>If you have any questions, our support team is here to help.</p>
+
+                    <div class="preview-signature">
+                        <p style="margin: 0;">- Razorpay Merchant Support Team</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal-footer">
+                <button class="btn-secondary" onclick="closePreviewModal()">Cancel</button>
+                <button class="btn-primary" onclick="confirmSendCommunication()">Send Communication (email)</button>
             </div>
         </div>
     </div>
@@ -618,13 +753,49 @@
             }
         });
 
-        // Close modal
+        // Close managed merchant modal
         function closeModal() {
             document.getElementById('managedMerchantModal').classList.remove('active');
         }
 
-        // Send to POC (Email for managed merchants)
-        function sendToPOC() {
+        // Show preview modal
+        function showPreview() {
+            // Close the confirmation modal
+            closeModal();
+
+            // Show the preview modal
+            document.getElementById('previewModal').classList.add('active');
+        }
+
+        // Close preview modal
+        function closePreviewModal() {
+            document.getElementById('previewModal').classList.remove('active');
+        }
+
+        // Switch between Email and WhatsApp tabs
+        function switchTab(tab) {
+            const tabs = document.querySelectorAll('.preview-tab');
+            const emailPreview = document.getElementById('emailPreview');
+            const whatsappPreview = document.getElementById('whatsappPreview');
+            const sendButton = document.querySelector('#previewModal .btn-primary');
+
+            tabs.forEach(t => t.classList.remove('active'));
+
+            if (tab === 'email') {
+                tabs[0].classList.add('active');
+                emailPreview.style.display = 'block';
+                whatsappPreview.style.display = 'none';
+                sendButton.textContent = 'Send Communication (email)';
+            } else {
+                tabs[1].classList.add('active');
+                emailPreview.style.display = 'none';
+                whatsappPreview.style.display = 'block';
+                sendButton.textContent = 'Send Communication (whatsapp)';
+            }
+        }
+
+        // Confirm and send communication
+        function confirmSendCommunication() {
             console.log('Sending ARI communication via EMAIL to POC...');
 
             // API call to send email to POC
@@ -641,7 +812,7 @@
             // })
 
             alert(`ARI communication sent via EMAIL to POC: ${merchantData.poc.name} (${merchantData.poc.email})`);
-            closeModal();
+            closePreviewModal();
         }
 
         // Send to Merchant (WhatsApp for unmanaged merchants)
@@ -663,10 +834,16 @@
             alert('ARI communication sent via WhatsApp to Merchant');
         }
 
-        // Close modal when clicking outside
+        // Close modals when clicking outside
         document.getElementById('managedMerchantModal').addEventListener('click', function(e) {
             if (e.target === this) {
                 closeModal();
+            }
+        });
+
+        document.getElementById('previewModal').addEventListener('click', function(e) {
+            if (e.target === this) {
+                closePreviewModal();
             }
         });
 
